[Issue #5] Fix proposal  Fix
Text "Upload .csv" not responsive #5

--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -34,7 +34,7 @@ header{
     }
     & > button{
         font-family: Karla;
-        font-size: 150%;
+        font-size: 1.2vw;
         color: rgba(0,0,0,.5);
         display: flex;
         flex-direction: column;
